crates/solidity/testing/snapshots/bindings_output/user_types/in_library/generated/v2/0.6.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or CloseBrace or ConstructorKeyword or EnumKeyword or EventKeyword or FallbackKeyword or FixedKeyword or FunctionKeyword or Identifier or IntKeyword or MappingKeyword or ModifierKeyword or ReceiveKeyword or StringKeyword or StructKeyword or UfixedKeyword or UintKeyword or UsingKeyword.
    ╭─[input.sol:8:5]
    │
  8 │ ╭─▶     type LibType is int32;
    ┆ ┆   
 12 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯

------------------------------------------------------------------------

Definitions (3):
- Def: #1 ["Test" @ input.sol:1:10] (contract)
- Def: #2 ["test" @ input.sol:2:14] (function, type: function () returns int32)
- Def: #3 ["MyLib" @ input.sol:7:9] (library)

------------------------------------------------------------------------

References (5):
- Ref: ["MyLib" @ input.sol:3:16] -> #3
- Ref: ["LibType" @ input.sol:3:22] -> unresolved
- Ref: ["unwrap" @ input.sol:3:30] -> unresolved
- Ref: ["MyLib" @ input.sol:3:37] -> #3
- Ref: ["create" @ input.sol:3:43] -> unresolved

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     function test() public returns (int32) {
   │              ──┬─  
   │                ╰─── name: 2
 3 │         return MyLib.LibType.unwrap(MyLib.create());
   │                ──┬── ───┬─── ───┬── ──┬── ───┬──  
   │                  ╰──────────────────────────────── ref: 3
   │                         │       │     │      │    
   │                         ╰───────────────────────── unresolved
   │                                 │     │      │    
   │                                 ╰───────────────── unresolved
   │                                       │      │    
   │                                       ╰─────────── ref: 3
   │                                              │    
   │                                              ╰──── unresolved
   │ 
 7 │ library MyLib {
   │         ──┬──  
   │           ╰──── name: 3
───╯
